--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Calendar App</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block body %}
 
 <h2> It compiled ! </h2>
 {% block body %}
