--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,12 +18,12 @@
     <div>
       <ul class="nav navbar-nav">
 	{% if loggedin %}
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-	{% else %}
-	<li class="active"><a href="#">Login</a></li>
+        <li class="active"><a href="/home">Home</a></li>
+        <li class="active"><a href="/logout">Logout</a></li>
+	
+        {% else %}
+	<li class="active"><a href="/login">Login</a></li>
+	<li class="active"><a href="/signup">Sign up</a></li>
         {% endif %}
       </ul>
     </div>
