--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,13 +1,57 @@
-{% extends "index.html" %}
+{% extends "layout.html" %}
+
 
 {% block body %}
-<table>
-{% for week in cal %} 
+
+<hr> 
+
+<table class="table-bordered">
 <tr>
-{% for day in week %}
-<td> </td>
-{% endfor %}
+	<td class="dayHeader day"> <center> Monday   </center></td>
+	<td class="dayHeader day"> <center> Tuesday  </center></td>
+	<td class="dayHeader day"> <center>Wednesday </center></td>
+	<td class="dayHeader day"> <center>Thursday  </center></td>
+	<td class="dayHeader day"> <center>Friday    </center></td>
+	<td class="dayHeader day"> <center>Saturday  </center></td>
+	<td class="dayHeader day"> <center>Sunday    </center></td>
 </tr>
+
+{% for week in days %} 
+	<tr>
+		{% for day in week %}
+		<td class="day" style="height:100px; width:100px;position:relative;"> 
+			<span style="position:absolute; top:0px;right:0px;">
+				<b> {{day.day}} </b>
+			</span>
+
+			<br>
+
+			<!-- Random For Now -->
+
+			{% if day.day %3 == 0 %}
+			<button type="button" class="btn btn-success" style="position:absolute;bottom:0px; left:0px;">
+  				<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
+			</button> 
+			{% endif %}
+
+			{% if day.day %3 == 1 %}
+			<button type="button" class="btn btn-primary" style="position:absolute;bottom:0px; left:0px;">
+  				<span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+			</button> 
+			{% endif %}
+
+
+			{% if day.day %3 == 2 %}
+			<button type="button" class="btn btn-info" style="position:absolute;bottom:0px; left:0px;">
+  				<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+			</button> 
+			{% endif %}
+
+
+		</td>
+		{% endfor %}
+	</tr>
 {% endfor %}
 </table>
+
 {% endblock %}
