--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,37 @@
 {% extends "layout.html" %}
-{% block body %}
-  <h2>Login</h2>
-  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <form action="{{ url_for('login') }}" method=post>
-    <dl>
-      <dt>Username:
-      <dd><input type=text name=username>
-      <dt>Password:
-      <dd><input type=password name=password>
-      <dd><input type=submit value=Login>
-    </dl>
-  </form>
+{% block login %}
+       <li class="active"><a href="#">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  
+<div class="row">
+  <div class="col-md-3 col-md-offset-2">
+    <span class="grabber"> Use Our Calendar </br> and  Stay Organized! </span>
+  </div>
+  <div class="col-md-3 ">
+    <img src="https://www.hays.ca/cs/groups/hays_common/@ca/@content/documents/promotionalcontent/hays_665918.png" style="width:304px;height:304px">
+  </div>
+</div>
+
+
+
+<div class = "row">
+  <div class="col-md-6 col-md-offset-2">
+    <span> Please Log in </span>
+    <form> 
+      <div class="form-group">
+        <label for ="user_id"> User Name </label>
+        <input type="text" class="form-control" id="user_id">
+      </div>
+
+      <div class ="form-group">
+        <label for="userpassword"> Password </label>
+        <input type="password" class="form-control" id="userpassword">
+      </div>
+      <button type="submit" class="btn btn-default">Login </button>
+    </form>
+  </div>
+</div>
 {% endblock %}
