--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
+<div class="span6">
   <h2>Sign Up</h2>
+</div>
+<div class="span6">
+
   <form action="{{ url_for('registerUser') }}" method=post>
     <dl>
       <dt>First Name:
@@ -15,4 +19,5 @@
       <dd><input type=text name=password>
     </dl>
   </form>
+</div>
 {% endblock %}
