--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,110 @@
+
 {% extends "layout.html" %}
+{% block header %}
+<script>
+
+var access_token;
+function statusChangeCallback(response) {
+    console.log('statusChangeCallback');
+    console.log(response);
+    // The response object is returned with a status field that lets the
+    // app know the current login status of the person.
+    // Full docs on the response object can be found in the documentation
+    // for FB.getLoginStatus().
+    if (response.status === 'connected') {
+      console.log("heeeere");
+      {% if not session['logged_in'] %}
+          console.log("here");
+          redirectToLogin();
+      {% endif %}
+    } else if (response.status === 'not_authorized') {
+      // The person is logged into Facebook, but not your app.
+      document.getElementById('status').innerHTML = 'Please log ' +
+        'into this app.';
+    } else {
+      // The person is not logged into Facebook, so we're not sure if
+      // they are logged into this app or not.
+      document.getElementById('status').innerHTML = 'Please log ' +
+        'into Facebook.';
+    }
+  }
+
+  // This function is called when someone finishes with the Login
+  // Button.  See the onlogin handler attached to it in the sample
+  // code below.
+  function checkLoginState() {
+    FB.getLoginStatus(function(response) {
+       statusChangeCallback(response);
+      
+    });
+  }
+
+  window.fbAsyncInit = function() {
+  FB.init({
+    appId      : '980574005299790',
+    cookie     : true,  // enable cookies to allow the server to access 
+                        // the session
+    xfbml      : true,  // parse social plugins on this page
+    version    : 'v2.2' // use version 2.2
+  });
+
+  // Now that we've initialized the JavaScript SDK, we call 
+  // FB.getLoginStatus().  This function gets the state of the
+  // person visiting this page and can return one of three states to
+  // the callback you provide.  They can be:
+  //
+  // 1. Logged into your app ('connected')
+  // 2. Logged into Facebook, but not your app ('not_authorized')
+  // 3. Not logged into Facebook and can't tell if they are logged into
+  //    your app or not.
+  //
+  // These three cases are handled in the callback function.
+
+  FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+    if (response.status === 'connected') {
+    
+    console.log(response.authResponse.accessToken);
+    access_token=response.authResponse.accessToken;
+}
+});
+
+  };
+
+
+  // Here we run a very simple test of the Graph API after login is
+  // successful.  See statusChangeCallback() for when this call is made.
+  function redirectToLogin() {
+
+    FB.api('/me', function(response) {
+      var myForm = document.createElement("form");
+      myForm.method="post";
+      myForm.setAttribute("action", "{{url_for('logged_in')}}");
+
+      var hiddenField = document.createElement("input");
+      hiddenField.setAttribute("name", "user_info");
+      hiddenField.setAttribute("value", JSON.stringify(response));
+      myForm.appendChild(hiddenField);
+
+
+      hiddenField = document.createElement("input");
+      hiddenField.setAttribute("name", "access_token");
+      hiddenField.setAttribute("value", access_token);
+      myForm.appendChild(hiddenField);
+      console.log("hhhheeeerrreeee");
+      myForm.submit();
+   });
+  }
+</script>
+
+{% endblock %}
+
 {% block body %}
+
+
   <h2>Login</h2>
   {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <form action="{{ url_for('login') }}" method=post>
+  <form action="" method=post>
     <dl>
       <dt>Username:
       <dd><input type=text name=username>
