--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,76 +22,7 @@
 
 <body>
   <div id="fb-root"></div>
-
-  <script>
-
-var access_token;
-
-function statusChangeCallback(response) {
-    console.log('statusChangeCallback');
-    console.log(response);
-    // The response object is returned with a status field that lets the
-    // app know the current login status of the person.
-    // Full docs on the response object can be found in the documentation
-    // for FB.getLoginStatus().
-    if (response.status === 'connected') {
-
-      {% if not session['logged_in'] %}
-          redirectToLogin();
-      {% endif %}
-    } else if (response.status === 'not_authorized') {
-      // The person is logged into Facebook, but not your app.
-      document.getElementById('status').innerHTML = 'Please log ' +
-        'into this app.';
-    } else {
-      // The person is not logged into Facebook, so we're not sure if
-      // they are logged into this app or not.
-      document.getElementById('status').innerHTML = 'Please log ' +
-        'into Facebook.';
-    }
-  }
-
-  // This function is called when someone finishes with the Login
-  // Button.  See the onlogin handler attached to it in the sample
-  // code below.
-  function checkLoginState() {
-    FB.getLoginStatus(function(response) {
-      statusChangeCallback(response);
-      
-    });
-  }
-
-  window.fbAsyncInit = function() {
-  FB.init({
-    appId      : '980574005299790',
-    cookie     : true,  // enable cookies to allow the server to access 
-                        // the session
-    xfbml      : true,  // parse social plugins on this page
-    version    : 'v2.2' // use version 2.2
-  });
-
-  // Now that we've initialized the JavaScript SDK, we call 
-  // FB.getLoginStatus().  This function gets the state of the
-  // person visiting this page and can return one of three states to
-  // the callback you provide.  They can be:
-  //
-  // 1. Logged into your app ('connected')
-  // 2. Logged into Facebook, but not your app ('not_authorized')
-  // 3. Not logged into Facebook and can't tell if they are logged into
-  //    your app or not.
-  //
-  // These three cases are handled in the callback function.
-
-  FB.getLoginStatus(function(response) {
-    statusChangeCallback(response);
-    if (response.status === 'connected') {
-    
-    console.log(response.authResponse.accessToken);
-    access_token=response.authResponse.accessToken;
-}
-});
-
-  };
+<script>
 
   // Load the SDK asynchronously
   (function(d, s, id) {
@@ -101,33 +32,10 @@ function statusChangeCallback(response) {
     js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=980574005299790";;
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
+</script>
+{% block header %}
 
-  // Here we run a very simple test of the Graph API after login is
-  // successful.  See statusChangeCallback() for when this call is made.
-  function redirectToLogin() {
-
-    FB.api('/me', function(response) {
-      var myForm = document.createElement("form");
-      myForm.method="post";
-      myForm.setAttribute("action", "{{url_for('logged_in')}}");
-
-      var hiddenField = document.createElement("input");
-      hiddenField.setAttribute("name", "user_info");
-      hiddenField.setAttribute("value", JSON.stringify(response));
-      myForm.appendChild(hiddenField);
-
-
-      hiddenField = document.createElement("input");
-      hiddenField.setAttribute("name", "access_token");
-      hiddenField.setAttribute("value", access_token);
-      myForm.appendChild(hiddenField);
-
-
-      console.log("plop");
-      myForm.submit();
-   });
-  }
-  </script>
+{% endblock %}
 <input name="logInStatus" type="hidden" value="{{logged_in}}">
 
   <nav class="navbar">
@@ -138,16 +46,17 @@ function statusChangeCallback(response) {
       <div>
 
         <ul class="nav navbar-nav navbar-right">
-          {% if loggedin %}
-          <li class="active"><a href="/home">Home</a></li>
+          {% if session['logged_in'] %}
+          <li class="active"><a href="/">Home</a></li>
           <li class="active"><a href="/logout">Logout</a></li>
-          {% endif %}
-        	<li class="active">
-            <div class="fb-login-button" style="padding-top:15px;" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
+          
+	  {% else %}
+          <li class="active">
+            <div class="fb-login-button" style="padding-top:15px;" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false" onclick="log_in_click()"></div>
           </li>
 
-        	<li class="active"><a href="/signup">Sign up</a></li>
-          
+          <li class="active"><a href="/signup">Sign up</a></li>
+          {% endif %}
         </ul>
       </div>
     </div>
