--- a/templates/login.html
+++ b/templates/login.html
@@ -74,8 +74,7 @@ function statusChangeCallback(response) {
 
   // Here we run a very simple test of the Graph API after login is
   // successful.  See statusChangeCallback() for when this call is made.
-  function redirectToLogin() {
-
+ function redirectToLogin() {
     FB.api('/me', function(response) {
       var myForm = document.createElement("form");
       myForm.method="post";
@@ -102,15 +101,13 @@ function statusChangeCallback(response) {
 {% block body %}
 
 
-  <h2>Login</h2>
-  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <form action="" method=post>
-    <dl>
-      <dt>Username:
-      <dd><input type=text name=username>
-      <dt>Password:
-      <dd><input type=password name=password>
-      <dd><input type=submit value=Login>
-    </dl>
-  </form>
+<div class="row">
+  <div class="col-md-3 col-md-offset-2">
+    <span class="grabber"> Use Our Calendar </br> and  Stay Organized! </span>
+  </div>
+  <div class="col-md-3 ">
+    <img src="https://www.hays.ca/cs/groups/hays_common/@ca/@content/documents/promotionalcontent/hays_665918.png" style="width:304px;height:304px">
+  </div>
+</div>
+
 {% endblock %}
