--- a/templates/logged_in.html
+++ b/templates/logged_in.html
@@ -3,8 +3,15 @@
 {% block body %}
 
 
+<div class="row">
+  <div class="col-md-6 col-md-offset-2">
+    <h1>Congratulations! You are logged in!</h1>    
+    <button type="button" class="btn btn-default btn-lg">
+      <span class="glyphicon glyphicon-thumbs-up"></span>
+    </button>
+  </div>
+</div>
 
-<h1>Congratulations! You are logged in!</h1>
 
 
 {% endblock %}
