--- a/templates/login.html
+++ b/templates/login.html
@@ -6,17 +6,15 @@
 var access_token;
 function statusChangeCallback(response) {
     console.log('statusChangeCallback');
-    console.log(response);
+    console.log(response.authResponse.accessToken);
     // The response object is returned with a status field that lets the
     // app know the current login status of the person.
     // Full docs on the response object can be found in the documentation
     // for FB.getLoginStatus().
     if (response.status === 'connected') {
       console.log("heeeere");
-      {% if not session['logged_in'] %}
-          console.log("here");
-          redirectToLogin();
-      {% endif %}
+      access_token=response.authResponse.accessToken;
+      redirectToLogin();
     } else if (response.status === 'not_authorized') {
       // The person is logged into Facebook, but not your app.
       document.getElementById('status').innerHTML = 'Please log ' +
@@ -34,7 +32,8 @@ function statusChangeCallback(response) {
   // code below.
   function checkLoginState() {
     FB.getLoginStatus(function(response) {
-       statusChangeCallback(response);
+         console.log("hella response"+response);
+         statusChangeCallback(response);
       
     });
   }
@@ -62,37 +61,54 @@ function statusChangeCallback(response) {
 
   FB.getLoginStatus(function(response) {
     statusChangeCallback(response);
+    console.log("yeehawwwwwwwwwww"+access_token);
     if (response.status === 'connected') {
     
-    console.log(response.authResponse.accessToken);
     access_token=response.authResponse.accessToken;
+    console.log("yeehawwwwwwwwwww"+response);
+    
+ {% if not session['logged_in'] %}
+          console.log("here");
+          redirectToLogin();
+      {% endif %}
 }
 });
 
   };
 
 
+
+ 
   // Here we run a very simple test of the Graph API after login is
   // successful.  See statusChangeCallback() for when this call is made.
  function redirectToLogin() {
-    FB.api('/me', function(response) {
-      var myForm = document.createElement("form");
+var myForm = document.createElement("form");
       myForm.method="post";
       myForm.setAttribute("action", "{{url_for('logged_in')}}");
+var otherHiddenField = document.createElement("input");
 
+
+    FB.api('/me', function(response) {
       var hiddenField = document.createElement("input");
       hiddenField.setAttribute("name", "user_info");
       hiddenField.setAttribute("value", JSON.stringify(response));
       myForm.appendChild(hiddenField);
 
-
+  console.log("Suuuuuuuuup BORRRRRRRRRRRRRRRRROOOOOO"+access_token);
       hiddenField = document.createElement("input");
       hiddenField.setAttribute("name", "access_token");
       hiddenField.setAttribute("value", access_token);
       myForm.appendChild(hiddenField);
       console.log("hhhheeeerrreeee");
-      myForm.submit();
    });
+    FB.api('/me/events', function(response) {
+     
+      otherHiddenField.setAttribute("name", "user_events");
+      console.log("heeeerrreee"+JSON.stringify(response));
+      otherHiddenField.setAttribute("value", JSON.stringify(response));
+myForm.appendChild(otherHiddenField);
+  myForm.submit();
+     });
   }
 </script>
 
