--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,6 +47,7 @@
         <ul class="nav navbar-nav navbar-right">
           {% if session['logged_in'] %}
           <li class="active"><a href="/">Home</a></li>
+          <li class="active"><a href="/manageEvents">Manage Events</a></li>
           <li class="active"><a href="/logout">Logout</a></li>
           
 	  {% else %}
