--- a/templates/404.html
+++ b/templates/404.html
@@ -1,12 +1,23 @@
 {% extends "layout.html" %}
 
 {% block body %}
-	<div class="row"> 
-		<div class="col-md-8 col-md-offset-2">
-			<h1> Page Not Found </h1>
-			<p> Sorry, we weren't able to find what you were looking for </p>
-			<p> <span class="glyphicon glyphicon-envelope"></span></p> 
-		</div>
+	</div>
 	</div>
 
+	<style>
+	span.glyphicon-wrench {
+		font-size: 4.2em;
+		color: steelblue;
+	}
+	</style>
+
+	<div>
+		<div class="row">
+		    <center>
+		      <h1 style="color:steelblue"> Page Not Found </h1>
+		      <p style="font-size:1.3em;"> Sorry, we weren't able to find what you were looking for </p>
+		      <p> <span class="glyphicon glyphicon-wrench"></span></p> 
+		    <center>
+
+      
 {% endblock %}
